--- a/.github/workflows/integration-misc-0-cron.yaml
+++ b/.github/workflows/integration-misc-0-cron.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2025-12-18T09:21:29Z by kres 26be706.
+# Generated on 2026-02-10T11:45:22Z by kres f3ab59e.
 
 concurrency:
   group: ${{ github.head_ref || github.run_id }}
@@ -46,7 +46,7 @@ jobs:
           git fetch --prune --unshallow
       - name: Set up Docker Buildx
         id: setup-buildx
-        uses: docker/setup-buildx-action@e468171a9de216ec08956ac3ada2f0791b6bd435 # version: v3.11.1
+        uses: docker/setup-buildx-action@8d2750c68a42422c14e847fe6c8ac0403b4cbd6f # version: v3.12.0
         with:
           driver: remote
           endpoint: tcp://buildkit-amd64.ci.svc.cluster.local:1234
@@ -116,6 +116,15 @@ jobs:
           SHORT_INTEGRATION_TEST: "yes"
           WITH_4K_DISK: "true"
           WITH_UKI_BOOT: "true"
+        run: |
+          sudo -E make e2e-qemu
+      - name: e2e-flannel-netpol
+        env:
+          GITHUB_STEP_NAME: ${{ github.job}}-e2e-flannel-netpol
+          IMAGE_REGISTRY: registry.dev.siderolabs.io
+          SHORT_INTEGRATION_TEST: "yes"
+          TEST_MODE: network-policy
+          WITH_CONFIG_PATCH: '@hack/test/patches/flannel-netpol.yaml'
         run: |
           sudo -E make e2e-qemu
       - name: save artifacts
