--- a/internal/app/machined/pkg/controllers/k8s/internal/k8stemplates/testdata/flannel-cluster-role-with-network-policies.yaml
+++ b/internal/app/machined/pkg/controllers/k8s/internal/k8stemplates/testdata/flannel-cluster-role-with-network-policies.yaml
@@ -21,3 +21,18 @@ rules:
   - nodes/status
   verbs:
   - patch
+- apiGroups:
+  - networking.k8s.io
+  resources:
+  - networkpolicies
+  verbs:
+  - list
+  - watch
+- apiGroups:
+  - policy.networking.k8s.io
+  resources:
+  - adminnetworkpolicies
+  - baselineadminnetworkpolicies
+  verbs:
+  - list
+  - watch
