--- a/.kres.yaml
+++ b/.kres.yaml
@@ -1128,6 +1128,15 @@ spec:
             IMAGE_REGISTRY: registry.dev.siderolabs.io
             WITH_UKI_BOOT: true
             WITH_4K_DISK: true
+        - name: e2e-flannel-netpol
+          command: e2e-qemu
+          withSudo: true
+          environment:
+            GITHUB_STEP_NAME: ${{ github.job}}-e2e-flannel-netpol
+            SHORT_INTEGRATION_TEST: yes
+            IMAGE_REGISTRY: registry.dev.siderolabs.io
+            WITH_CONFIG_PATCH: "@hack/test/patches/flannel-netpol.yaml"
+            TEST_MODE: network-policy
         - name: save-talos-logs
           conditions:
             - always
