feat: add VLAN support to OpenStack platform
This adds support for VLAN interfaces in OpenStack network_data.json.
VLANs are configured with type "vlan" and reference a parent link via
"vlan_link" field. The VLAN ID is specified in "vlan_id" field.

Example network_data.json entry:
{
    "type": "vlan",
    "vlan_link": "tap7819ff08-20",
    "vlan_id": 100
}

This enables Talos to automatically configure VLAN interfaces when
booting on OpenStack/Ironic bare metal with VLAN-based network topology.

Signed-off-by: Max Makarov <maxpain@linux.com>
Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/internal/app/machined/pkg/runtime/v1alpha1/platform/openstack/testdata/expected.yaml
+++ b/internal/app/machined/pkg/runtime/v1alpha1/platform/openstack/testdata/expected.yaml
@@ -94,6 +94,17 @@ links:
       masterName: bond0
       slaveIndex: 1
       layer: platform
+    - name: bond0.100
+      logical: true
+      up: true
+      mtu: 1400
+      kind: vlan
+      type: ether
+      parentName: bond0
+      vlan:
+        vlanID: 100
+        vlanProtocol: 802.1q
+      layer: platform
 routes:
     - family: inet6
       dst: ""
@@ -190,6 +201,13 @@ operators:
       requireUp: true
       dhcp6:
         routeMetric: 2048
+        skipHostnameRequest: true
+      layer: platform
+    - operator: dhcp4
+      linkName: bond0.100
+      requireUp: true
+      dhcp4:
+        routeMetric: 1024
         skipHostnameRequest: true
       layer: platform
 externalIPs:
