feat: add extraArgs from service-account-issuer
In API Server, passing extra args with `service-account-issuer` will add them to default value.

Fixes #11694

Signed-off-by: Mateusz Urbanek <mateusz.urbanek@siderolabs.com>

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -138,6 +138,12 @@ This includes fields such as `.cluster.apiServer.extraArgs`.
 BREAKING: If you were relying on the resources EtcdConfigs, KubeletConfigs, ControllerManagerConfigs, SchedulerConfigs or APIServerConfigs, the protobuf format has changed from `map<string,string>` to `map<string,message>`.
 """
 
+    [notes.serviceAccountIssuer]
+    title = "Service Account Issuer configuration"
+    description = """\
+In API Server, passing extra args with `service-account-issuer` will prepend them before default value.
+"""
+
 [make_deps]
 
     [make_deps.tools]
