fix: use append instead of prepend in service-account-issuer
Changing `.cluster.controlPlane.endpoint=$NEW` will cause old tokens to be no longer valid.
We want to ensure that new tokens are issued using the `.cluster.controlPlane.endpoint=$NEW` value,
but all the existing tokens (issued using `.cluster.controlPlane.endpoint=$OLD`) are still accepted.

Signed-off-by: Mateusz Urbanek <mateusz.urbanek@siderolabs.com>

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -141,7 +141,9 @@ BREAKING: If you were relying on the resources EtcdConfigs, KubeletConfigs, Cont
     [notes.serviceAccountIssuer]
     title = "Service Account Issuer configuration"
     description = """\
-In API Server, passing extra args with `service-account-issuer` will prepend them before default value.
+In API Server, passing extra args with `service-account-issuer` will append them after default value.
+This allows easy migration, e.g. by changing `.cluster.controlPlane.endpoint` to new value, and keeping the old value in
+`.cluster.apiServer.extraArgs["service-account-issuer"]`.
 """
 
 [make_deps]
