fix: marshal of FailOverMac property
This value for some historical reason (I guess treating empty string as
'none') doesn't use standard enumer's methods.

So we shipped it in Talos 1.12 without proper encoding/decoding
in YAML config documents (it was actually converted to int).

Fix encoding, but keep backwards compatibility for integer values
just in case someone already started relying on it.

Fixes #12625

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/internal/app/machined/pkg/runtime/v1alpha1/platform/equinixmetal/testdata/expected.yaml
+++ b/internal/app/machined/pkg/runtime/v1alpha1/platform/equinixmetal/testdata/expected.yaml
@@ -48,7 +48,7 @@ links:
         arpValidate: none
         arpAllTargets: any
         primaryReselect: always
-        failOverMac: 0
+        failOverMac: none
         miimon: 100
         updelay: 200
         downdelay: 200
