feat: implement layering for ProbeSpec
Same as for any other resource - layering per source, and proper merge
across layers, so we can see where it comes from.

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -162,6 +162,13 @@ The nameservers configuration in machine configuration now overwrites any previo
 Previously a smart merge was performed to keep IPv4/IPv6 nameservers from lower layers if the machine configuration specified only one type.
 """
 
+    [notes.probe_config]
+        title = "ProbeConfig"
+        description = """\
+The TCPProbeConfig configuration document allows to configure TCP probes for network reachability checks.
+This allows to define a custom connectivity condition.
+"""
+
 [make_deps]
 
     [make_deps.tools]
