chore: move sync logging code to go-kubernetes package
so it can be reused in Omni

Signed-off-by: Orzelius <33936483+Orzelius@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ init.yaml
 controlplane.yaml
 join.yaml
 worker.yaml
+machineconfig.yaml
 talosconfig
 /kubeconfig
 hack/test/libvirt/matchbox/assets/*
