fix: improve OpenStack bare metal network configuration reliability
This commit improves network configuration on OpenStack bare metal
(Ironic) by:

1. Adding WaitForDevicesReady call before parsing network configuration
   to ensure network interfaces are available.

2. Adding fallback to HardwareAddr when PermanentAddr is empty, similar
   to the NoCloud platform implementation.

3. Adding a retry loop with exponential backoff to handle cases where
   network interfaces are not immediately available after device init.

4. Removing hardcoded bond parameters (UpDelay: 200, DownDelay: 200,
   LACPRate: fast) to use kernel defaults matching Ubuntu behavior.

5. Explicitly setting the bond interface MAC address from OpenStack
   metadata to ensure the switch sees the correct MAC on the bond.

These changes address network configuration failures on bare metal
OpenStack deployments where interfaces may not be immediately
discoverable by MAC address, and fix bond MAC address mismatch issues
where the switch expects a specific MAC on the bond interface.

Signed-off-by: Max Makarov <maxpain@linux.com>
Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/internal/app/machined/pkg/runtime/v1alpha1/platform/openstack/testdata/expected.yaml
+++ b/internal/app/machined/pkg/runtime/v1alpha1/platform/openstack/testdata/expected.yaml
@@ -36,6 +36,7 @@ links:
       mtu: 1500
       kind: bond
       type: ether
+      hardwareAddr: 4c:d9:8f:b3:34:f7
       bondMaster:
         mode: 802.3ad
         xmitHashPolicy: layer2+3
