feat: add requireUniqueMatch and skipAliasedLinks to LinkAliasConfig
This adds two new selector options to `LinkAliasConfig`:

- `requireUniqueMatch` (default: true): When false, allows the selector
  to match multiple links and uses the first matching link.
- `skipAliasedLinks` (default: false): When true, skips links that
  already have an alias from a previous config.

These options enable creating sequential aliases like `net0` and `net1`
from any N random links, which is useful for bonding/bridging setups
where consistent interface naming is needed regardless of physical
hardware.

Example:
```yaml
apiVersion: v1alpha1
kind: LinkAliasConfig
name: net0
selector:
    match: link.type == 1
    requireUniqueMatch: false
---
apiVersion: v1alpha1
kind: LinkAliasConfig
name: net1
selector:
    match: link.type == 1
    requireUniqueMatch: false
    skipAliasedLinks: true
```

Closes #12718

Signed-off-by: Nico Berlee <nico.berlee@on2it.net>

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -129,6 +129,17 @@ It replaces and deprecates the previous method of configuring KubeSpan via the `
 The old configuration field will continue to work for backward compatibility.
 """
 
+    [notes.link_alias_config]
+        title = "LinkAliasConfig Selector Enhancements"
+        description = """\
+`LinkAliasConfig` selector now supports two new options:
+
+- `requireUniqueMatch` (default: `true`): When `false`, uses the first matching link instead of requiring exactly one match.
+- `skipAliasedLinks` (default: `false`): When `true`, skips links already aliased by a previous `LinkAliasConfig`.
+
+This enables creating stable aliases like `net0`, `net1` from any N links, useful for `BondConfig` and `BridgeConfig` member interfaces on varying hardware.
+"""
+
     [notes.extraArgs]
         title = "Extra Arguments accept slices in addition to strings"
         description = """\
