--- a/pkg/machinery/config/types/network/testdata/linkaliasconfig.yaml
+++ b/pkg/machinery/config/types/network/testdata/linkaliasconfig.yaml
@@ -3,3 +3,5 @@ kind: LinkAliasConfig
 name: net0
 selector:
     match: mac(link.permanent_addr) == "00:1a:2b:3c:4d:5e"
+    requireUniqueMatch: true
+    skipAliasedLinks: false
