chore: test extensions
Test extensions

Signed-off-by: Noel Georgi <git@frezbo.dev>

--- a/.kres.yaml
+++ b/.kres.yaml
@@ -280,6 +280,9 @@ spec:
       crons:
         - '30 7 * * *'
       steps:
+        - name: login-to-registry
+          registryLoginStep:
+            registry: ghcr.io
         - name: local-grype-scan-result
           environment:
             DEST: _out
