feat: multi-doc support for configuring vrfs
Fixes https://github.com/siderolabs/talos/issues/11960

This adds a new network config document type, network.VRFConfig that can
be used to configure vrfs https://docs.kernel.org/networking/vrf.html.

Signed-off-by: pythoner6 <pythoner6@gmail.com>
Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -237,6 +237,12 @@ Talos now uses a kernel built using Clang compiler, and optimized using ThinLTO.
 alongside some hardening features, such as BTI on supported ARM systems.
 """
 
+    [notes.vrf]
+        title = "VRF Support"
+        description = """\
+Talos now supports VRF (Virtual Routing and Forwarding) via the new `VRFConfig` machine config document.
+"""
+
 [make_deps]
 
     [make_deps.tools]
