feat: implement correct config patching for extraArgs fields
Since the type was changed to the custom one, merging code can't handle
it correctly, so add an explicit merge method.

```
merge field v1alpha1.Config.ClusterConfig: merge field v1alpha1.ClusterConfig.ProxyConfig: merge field v1alpha1.ProxyConfig.ExtraArgsConfig: merge map key v1alpha1.Args[metrics-bind-address]: merge field v1alpha1.ArgValue.strValue: merge not possible, left $(POD_IP):10249 is not settable
```

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/pkg/machinery/config/configpatcher/testdata/apply/config.yaml
+++ b/pkg/machinery/config/configpatcher/testdata/apply/config.yaml
@@ -5,3 +5,8 @@ machine:
     interfaces:
       - interface: eth0
         dhcp: true
+cluster:
+  proxy:
+    extraArgs:
+       metrics-bind-address: $(POD_IP):10249
+       foo: bar
