feat: implement blackhole route config
This is useful part of #12608

Closes #12608

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -243,6 +243,12 @@ alongside some hardening features, such as BTI on supported ARM systems.
 Talos now supports VRF (Virtual Routing and Forwarding) via the new `VRFConfig` machine config document.
 """
 
+    [notest.blackhole_routes]
+        title = "Blackhole Route Support"
+        description = """\
+Talos now supports blackhole routes via the new `BlackholeRouteConfig` machine config document.
+"""
+
 [make_deps]
 
     [make_deps.tools]
